--- a/drinks.html
+++ b/drinks.html
@@ -128,14 +128,14 @@
     </style>
 </head>
 <body>
-     <!-- Your content goes here -->
+    <!-- Your content goes here -->
     <!-- Bootstrap JS and dependencies (optional) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <header>
         <div class="header-left" id="header-left">
             <img src="https://imgur.com/bpw7IUT.png" alt="Logo">
-            <a href="homepage.html" class="header-link">Home</a>
+            <a href="index.html" class="header-link">Home</a>
             <a href="menu.html" class="header-link">Menu</a>
             <a href="contact.html" class="header-link">Contact</a>
             <a href="order.html" class="header-link">Order Online</a>
@@ -164,7 +164,6 @@
                 <img src="https://imgur.com/1WseHto.jpg" alt="Drink 8" class="drink-image">
                 <div class="drink-price">150 Pesos</div>
             </div>
-
         </section>
     </main>
 
