--- a/menu2.html
+++ b/menu2.html
@@ -153,7 +153,7 @@
     <header>
         <div class="header-left" id="header-left">
             <img src="https://imgur.com/bpw7IUT.png" alt="Logo">
-            <a href="homepage.html" class="header-link">Home</a>
+            <a href="index.html" class="header-link">Home</a>
             <a href="menu.html" class="header-link">Menu</a>
             <a href="contact.html" class="header-link">Contact</a>
             <a href="order.html" class="header-link">Order</a>
