--- a/order.html
+++ b/order.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> <!-- Importing the font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <style>
-        /* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -18,73 +16,68 @@
         body {
             background-color: #000;
             color: #fff;
-            font-family: 'Roboto Mono', monospace; /* Set the font to Roboto Mono */
-            overflow: hidden; /* Prevent body from scrolling */
+            font-family: 'Roboto Mono', monospace;
+            overflow: hidden;
         }
 
-        /* Header */
         header {
             background-color: #fff;
             color: #000;
             padding: 10px;
-            height: 80px; /* Fixed header height */
+            height: 80px;
             display: flex;
             align-items: center; 
-            justify-content: space-between; /* Space between left and right sections */
+            justify-content: space-between;
             position: relative;
         }
 
         .header-left {
             display: flex;
-            align-items: center; /* Center the logo and links vertically */
+            align-items: center;
         }
 
         header img {
-            max-height: 60px; /* Set maximum height for the logo */
-            height: auto; /* Maintain aspect ratio */
-            margin-right: 10px; /* Space between logo and links */
+            max-height: 60px;
+            height: auto;
+            margin-right: 10px;
         }
 
         .header-link {
             color: #000;
             text-decoration: none;
-            margin: 0 10px; /* Space between the links */
+            margin: 0 10px;
             font-size: 18px;
         }
 
-        /* Main Content */
         main {
             padding: 40px;
             text-align: center;
-            height: calc(100vh - 160px); /* Adjust height for the footer and header */
-            overflow: hidden; /* Prevent main from scrolling */
+            height: calc(100vh - 160px);
+            overflow: hidden;
         }
 
-        /* Scrollable Order Container */
         .order-container {
-            height: 300px; /* Fixed height for the order container */
-            overflow-y: auto; /* Enable vertical scrolling */
-            border: 1px solid #fff; /* Add border for visibility */
-            border-radius: 5px; /* Rounded corners */
-            padding: 10px; /* Padding for inner content */
-            margin-bottom: 20px; /* Space below the order container */
+            height: 300px;
+            overflow-y: auto;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            padding: 10px;
+            margin-bottom: 20px;
         }
 
-        /* Footer */
         footer {
             background-color: #fff;
             color: #000;
             padding: 20px;
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* Align items to the left */
+            justify-content: flex-start;
             position: fixed;
             bottom: 0;
             width: 100%;
-            gap: 20px; /* Add space between follow text and icons */
+            gap: 20px;
         }
 
-        /* Social Follow Text */
         footer .social-follow {
             background-color: #000;
             color: #fff;
@@ -92,31 +85,26 @@
             border-radius: 5px;
         }
 
-        /* Social Icons */
         footer .social-icons {
             display: flex;
-            gap: 20px; /* Space between each social icon item */
+            gap: 20px;
         }
 
-        /* Social Item (Icon + Text) */
         footer .social-item {
             display: flex;
             align-items: center;
-            gap: 5px; /* Space between icon and text */
+            gap: 5px;
         }
 
-        /* Social Media Icons */
         footer .social-icons img {
             width: 30px;
             height: auto;
         }
 
-        /* Rights Reserved */
         footer .rights-reserved {
-            margin-left: auto; /* Pushes this item to the right */
+            margin-left: auto;
         }
 
-        /* Submit Button Style */
         .submit-button {
             background-color: #fff; 
             color: #000; 
@@ -125,67 +113,63 @@
             font-size: 18px; 
             border-radius: 5px; 
             cursor: pointer; 
-            margin-top: 10px; /* Space above button */
+            margin-top: 10px; 
         }
 
         .submit-button:hover {
-            background-color: #ddd; /* Slightly darker on hover */
+            background-color: #ddd;
         }
 
-        /* Form Styles */
         form {
-            display: flex; /* Use flexbox to stack elements vertically */
-            flex-direction: column; /* Stack elements vertically */
-            align-items: center; /* Center items horizontally */
-            gap: 15px; /* Space between form elements */
-            margin-top: 20px; /* Space above the form */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            margin-top: 20px;
         }
 
         input[type="text"] {
-            padding: 10px; /* Space inside the input */
-            width: 250px; /* Set a width for inputs */
-            border: 1px solid #fff; /* White border for inputs */
-            border-radius: 5px; /* Rounded corners for inputs */
-            background-color: transparent; /* Transparent background */
-            color: #fff; /* White text color */
+            padding: 10px;
+            width: 250px;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            background-color: transparent;
+            color: #fff;
         }
 
         input[type="text"]::placeholder {
-            color: #ccc; /* Light grey placeholder text */
+            color: #ccc;
         }
 
-        /* Container for Orders */
         .order-item {
-            display: flex; /* Use flexbox for order items */
-            flex-direction: column; /* Stack inputs vertically */
-            align-items: center; /* Center align */
-            margin-bottom: 20px; /* Space below each order */
-            gap: 10px; /* Space between inputs */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
+            gap: 10px;
         }
 
         .remove-button {
-            background-color: #ff4d4d; /* Red background for remove button */
-            border: none; /* No border */
-            color: #fff; /* White text */
-            padding: 5px 10px; /* Padding for button */
-            border-radius: 5px; /* Rounded corners */
-            cursor: pointer; /* Pointer cursor */
+            background-color: #ff4d4d;
+            border: none;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         .remove-button:hover {
-            background-color: #cc0000; /* Darker red on hover */
+            background-color: #cc0000;
         }
     </style>
 </head>
 <body>
-     <!-- Your content goes here -->
-    <!-- Bootstrap JS and dependencies (optional) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <header>
         <div class="header-left">
-            <img src="https://imgur.com/bpw7IUT.png" alt="Logo"> <!-- Updated Logo -->
-            <a href="homepage.html" class="header-link">Home</a>
+            <img src="https://imgur.com/bpw7IUT.png" alt="Logo">
+            <a href="index.html" class="header-link">Home</a>
             <a href="menu.html" class="header-link">Menu</a>
             <a href="contact.html" class="header-link">Contact</a>
             <a href="order.html" class="header-link">Order Online</a>
@@ -195,9 +179,7 @@
     <main>
         <section>
             <h2>Place your Order</h2>
-            <div class="order-container" id="order-container">
-                <!-- Dynamic Order Fields will be appended here -->
-            </div>
+            <div class="order-container" id="order-container"></div>
             <button class="submit-button" onclick="addOrderField()">Add Order</button>
             <button class="submit-button" onclick="submitOrders()">Submit All Orders</button>
         </section>
@@ -223,7 +205,6 @@
     </footer>
 
     <script>
-        // Function to add a new order field
         function addOrderField() {
             const orderContainer = document.getElementById('order-container');
 
@@ -262,7 +243,6 @@
             orderContainer.appendChild(orderDiv);
         }
 
-        // Function to handle order submission
         function submitOrders() {
             const orders = document.querySelectorAll('.order-item');
             if (orders.length === 0) {
@@ -278,7 +258,6 @@
                 const phone = order.children[2].value.trim();
                 const address = order.children[3].value.trim();
 
-                // Check if any field is empty
                 if (!name || !orderText || !phone || !address) {
                     alert('Please fill out all fields in each order before submitting.');
                     return;
@@ -288,7 +267,7 @@
             }
 
             alert(`Orders Submitted:\n${orderDetails}`);
-            document.getElementById('order-container').innerHTML = ''; // Clear the order container
+            document.getElementById('order-container').innerHTML = '';
         }
     </script>
 </body>
